--- a/config.toml
+++ b/config.toml
@@ -40,7 +40,7 @@ canonifyurls = true
   # Your profile picture
   # Overwritten by your gravatar image if `author.gravatarEmail` is filled
   # picture = "https://cdn1.iconfinder.com/data/icons/ninja-things-1/1772/ninja-simple-512.png"
-  picture = "durango.jpg"
+  picture = "profile-bw.jpg"
   # Your Twitter username without the @. E.g : thibaudlepretre
   twitter = "bryanwhiting"
   # Your google plus profile id. E.g : +ThibaudLepretre or 114625208755123718311
