--- a/config.toml
+++ b/config.toml
@@ -17,8 +17,8 @@ languageCode = "en-us"
 defaultContentLanguage = "en-us"
 title = "My take on data"
 theme = "hugo-tranquilpeak-theme"
-disqusShortname = "hugo-tranquilpeak-theme"
-# googleAnalytics = "UA-123-45"
+disqusShortname = "bryanwhiting1"
+googleAnalytics = "UA-85616639-1"
 paginate = 7
 canonifyurls = true
 
@@ -40,7 +40,7 @@ canonifyurls = true
   # Your profile picture
   # Overwritten by your gravatar image if `author.gravatarEmail` is filled
   # picture = "https://cdn1.iconfinder.com/data/icons/ninja-things-1/1772/ninja-simple-512.png"
-  picture = "profile-bw.jpg"
+  picture = "durango.jpg"
   # Your Twitter username without the @. E.g : thibaudlepretre
   twitter = "bryanwhiting"
   # Your google plus profile id. E.g : +ThibaudLepretre or 114625208755123718311
