--- a/config.toml
+++ b/config.toml
@@ -17,7 +17,7 @@ languageCode = "en-us"
 defaultContentLanguage = "en-us"
 title = "My take on data"
 theme = "hugo-tranquilpeak-theme"
-disqusShortname = "http-farmer-aaron-35107-netlify-com"
+disqusShortname = "bryanwhiting1"
 googleAnalytics = "UA-85616639-1"
 paginate = 7
 canonifyurls = true
