Added twitter handle

--- a/config.toml
+++ b/config.toml
@@ -113,7 +113,12 @@ ignoreFiles = ["\\.Rmd$", "_files$", "_cache$"]
   name = "Stack Overflow"
   pre = "<i class=\"sidebar-button-icon fa fa-lg fa-stack-overflow\"></i>"
   url = "https://stackoverflow.com/users/2138773/bryan"
-
+[[menu.links]]
+  weight = 1
+  identifier = "twitter"
+  name = "Twitter"
+  pre = "<i class=\"sidebar-button-icon fa fa-lg fa-twitter\"></i>"
+  url = "https://twitter.com/bryanwhiting"
 
 [[menu.misc]]
   weight = 0
